[package]
name = "noodle"
version = "0.1.0"
authors = ["Zach Banks <zjbanks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#static_assertions = "1.1"
fixedbitset = "0.4.0"
indexmap = "1.6.2"
pest = "2.1.0"
pest_derive = "2.1.0"

[dependencies.smallvec]
version = "1.6.1"
features = ["union"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = 2
lto = true
panic = 'abort'
