[workspace]
members = [
    "noodle",
    "noodle-app",
]
default-run = "noodle"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'

[profile.test]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = 2
lto = true
panic = 'abort'
