[package]
name = "noodle-app"
version = "0.1.0"
authors = ["Zach Banks <zjbanks@gmail.com>"]
edition = "2018"

[dependencies]
noodle = { path = "../noodle", features = ["serialize"] }
bytes = "1.0.1"
either = "1.6.1"
futures = "0.3.13"
http = "0.2.3"
hyper = { version = "0.14.5", features = ["stream"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1.5", features = ["time"] }
warp = "0.3.1"
