[package]
name = "noodle-cli"
version = "0.1.0"
authors = ["Zach Banks <zjbanks@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "noodle"
path = "src/main.rs"

[dependencies]
noodle = { path = "../noodle" }
anyhow = "1.0"
structopt = { version = "0.3" }
