[package]
name = "noodle"
version = "0.2.0"
authors = ["Zach Banks <zjbanks@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "noodle-example"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
indexmap = "1.6.2"
pest = "2.1.0"
pest_derive = "2.1.0"
unicode-normalization = "0.1.17"
serde = { version = "1.0", features = ["derive"], optional = true }
zstd = "0.9"
fst = "0.4"
memmap = "0.7"

[features]
serialize = ["serde"]
